resident list with bootstrap collapse added

--- a/document.html
+++ b/document.html
@@ -137,7 +137,7 @@
                 <div class="main-panel">
                     <h2 style="margin-left: 20px; color: saddlebrown;">Dues</h2>
                     <div class="space"></div>
-                    <table id="due-table">
+                    <table class="basic-table">
                         <tr>
                           <th>Date</th>
                           <th>Fee</th>
