--- a/announcements.html
+++ b/announcements.html
@@ -2,187 +2,128 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="title" content="Apartment Complex Web Page">
-    <meta name="keywords" content="Apartment Complex Web Page, Apartment Complex Manager">
-    <meta name="description" content="a web site for the management of an apartment complex">
-    <meta name="author" content="Hakkı Can Akut">
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;1,400&display=swap"
-        rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,400;0,700;1,400&display=swap"
-        rel="stylesheet">
-    <title>announcements</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="title" content="Apartment Complex Web Page">
+  <meta name="keywords" content="Apartment Complex Web Page, Apartment Complex Manager">
+  <meta name="description" content="a web site for the management of an apartment complex">
+  <meta name="author" content="Hakkı Can Akut">
+  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,700;1,400&display=swap"
+      rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Titillium+Web:ital,wght@0,400;0,700;1,400&display=swap"
+      rel="stylesheet">
+  <title>Announcements</title>
+  <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+
 </head>
 
 <body>
-    <div id="page-container">
-        <div id="content-wrap">
-            <nav>
-                <div class="container clear-div">
-                    <div id="logo-container">
-                        <a href="home-page.php" class="logo">
-                            Akdeniz Apartment Complex
-                        </a>
-                    </div>
-                    <div id="top-nav-menu">
-                        <ul>
-                            <li class="top-nav-item">
-                                <a href="announcements.html" class="top-nav-link">Announcments</a>
-                            </li>
-                            <li class="top-nav-item">
-                                <a href="management.html" class="top-nav-link">Management</a>
-                            </li>
-                            <li class="top-nav-item">
-                                <a href="document.html" class="top-nav-link">Documents</a>
-                            </li>
-                            <li class="top-nav-item">
-                                <div class="dropdown-button">
-                                    <button class="dropdown-item">Contact
-                                        <i class="fa fa-caret-down"></i>
-                                    </button>
-                                    <div class="dropdown-content">
-                                        <a href="contact.html">suggestion</a>
-                                        <a href="#contact">contact info</a>
-                                    </div>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </nav>
-            <div class="space"></div>
-            <div class="container clear-div">
-                <div class="left-panel">
-                    <h2 style="margin-left: 40px; color: saddlebrown;">Announcments</h2>
-                    <ul>
-                        <li>
-                            <a href="announcements.html">
-                                <p class="left-title">
-                                    Meeting
-                                </p>
 
-                                <p class="left-subtitle">
-                                    There would be a meeting on 10/11/2020
-                                </p>
-                            </a>
-                        </li>
-                        <hr>
-                        <li>
-                            <a href="announce.html">
-                                <p class="left-title">
-                                    Announcement B
-                                </p>
-
-                                <p class="left-subtitle">
-                                    subtitle of Announcement B
-                                </p>
-                            </a>
-                        </li>
-                        <hr>
-                        <li>
-                            <a href="announce.html">
-                                <p class="left-title">
-                                    Announcement C
-                                </p>
-
-                                <p class="left-subtitle">
-                                    subtitle of Announcement C
-                                </p>
-                            </a>
-                        </li>
-                        <hr>
-                        <li>
-                            <a href="announce.html">
-                                <p class="left-title">
-                                    Announcement D
-                                </p>
-
-                                <p class="left-subtitle">
-                                    subtitle of Announcement D
-                                </p>
-                            </a>
-                        </li>
-                        <hr>
-                        <li>
-                            <a href="announce.html">
-                                <p class="left-title">
-                                    Announcement E
-                                </p>
-
-                                <p class="left-subtitle">
-                                    subtitle of Announcement E
-                                </p>
-                            </a>
-                        </li>
-                        <hr>
-                        <li>
-                            <a href="announce.html">
-                                <p class="left-title">
-                                    Announcement F
-                                </p>
-
-                                <p class="left-subtitle">
-                                    subtitle of Announcement F
-                                </p>
-                            </a>
-                        </li>
-                        <hr>
-                    </ul>
-                    <form action="logout.php" method="post">
-                        <input type="submit" style="color:#7EA172;" id="logout" value="Log out" name="logout">
-                        </input>
-                    </form>
-                </div>
-                <div class="main-panel">
-                    <h2 style="margin-left: 20px; color: saddlebrown;">Meeting</h2>
-                    <p style="padding-top: 10px;">
-                        There would be a meeting on 10/11/2020. <br>
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium eligendi porro ullam harum
-                        voluptatem eaque, sint, qui perspiciatis blanditiis accusantium nihil ratione, recusandae
-                        provident consectetur enim ab laboriosam fugit rem?
-                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus, quo incidunt voluptas vero
-                        hic explicabo aliquid sapiente dolor non architecto facilis eius blanditiis, facere itaque.
-                        Odio, hic reprehenderit. Eos, temporibus!
-                    </p>
-                    <div class="space"></div>
-                </div>
-            </div>
-            <div class="space"></div>
-        </div>
-        <footer>
-            <div class="container clear-div" id="contact">
-                <ul>
-                    <li>
-                        <div class="col">
-                            <h4>Location</h4>
-                            <p>
-                                A Mahallesi, B Caddesi, Akdeniz Sitesi, Türkiye/Antalya
-                            </p>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="col">
-                            <h4>Email</h4>
-                            <p>
-                                akdeniz@apartment.com
-                            </p>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="col">
-                            <h4>
-                                Phone Number
-                            </h4>
-                            <p>
-                                +0(222) 222 2222
-                            </p>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-        </footer>
+  <div class="d-flex page-container" id="wrapper">
+    <div class="border-right left-panel" id="sidebar-wrapper">
+      <div class="sidebar-heading">Announce</div>
+      <div class="list-group list-group-flush">
+        <a href="#" class="list-group-item list-group-item-action ">Meeting</a>
+        <a href="#" class="list-group-item list-group-item-action ">Covid-19 Rules</a>
+      </div>
     </div>
+    <div id="page-content-wrapper" class="content-wrap">
+      <nav class="navbar navbar-expand-lg navbar-light clear-div border-bottom top-nav-menu">
+        <button style="background-color: rgb(143, 75, 58);border: saddlebrown;" class="btn btn-primary" id="menu-toggle"><i class="fa fa-caret-right"></i></button>
+        <div id="logo-container">
+          <a href="home-page.php" class="logo">
+              Akdeniz Apartment Complex
+          </a>
+      </div>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse " id="navbarSupportedContent">
+          <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
+            <li class="top-nav-item">
+              <a  href="#">Announcements</a>
+            </li>
+            <li class="top-nav-item">
+              <a  href="document.html">Documents</a>
+            </li>
+            <li class="top-nav-item">
+              <a  href="management.html">Management</a>
+            </li>
+            <li class="top-nav-item dropdown-button">
+              <a  href="contact.html"  role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Contact <i class="fa fa-caret-down"></i>
+              </a>
+              <div class="dropdown-menu-right dropdown-content" aria-labelledby="navbarDropdown">
+                <a href="contact.html">suggestion</a>
+                <a href="#contact">contact info</a>
+              </div>
+            </li>
+          </li>
+          </ul>
+        </div>
+      </nav>
+
+      <div class="container-fluid">
+        <div class="main-panel">
+          <h2 style="margin-left: 20px; color: saddlebrown;">Meeting</h2>
+          <div class="space"></div>
+          <p style="padding-top: 10px;">
+            There would be a meeting on 10/11/2020. <br>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Laudantium eligendi porro ullam harum
+            voluptatem eaque, sint, qui perspiciatis blanditiis accusantium nihil ratione, recusandae
+            provident consectetur enim ab laboriosam fugit rem?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus, quo incidunt voluptas vero
+            hic explicabo aliquid sapiente dolor non architecto facilis eius blanditiis, facere itaque.
+            Odio, hic reprehenderit. Eos, temporibus!
+        </p>
+        <div class="space"></div>
+      </div>
+      </div>
+      <div class="space"></div>
+    </div>
+    <footer>
+      <div class="container clear-div" id="contact">
+          <ul>
+              <li>
+                  <div class="col">
+                      <h4>Location</h4>
+                      <p>
+                          A Mahallesi, B Caddesi, Akdeniz Sitesi, Türkiye/Antalya
+                      </p>
+                  </div>
+              </li>
+              <li>
+                  <div class="col">
+                      <h4>Email</h4>
+                      <p>
+                          akdeniz@apartment.com
+                      </p>
+                  </div>
+              </li>
+              <li>
+                  <div class="col">
+                      <h4>
+                          Phone Number
+                      </h4>
+                      <p>
+                          +0(222) 222 2222
+                      </p>
+                  </div>
+              </li>
+          </ul>
+      </div>
+      </footer>
+  </div>
+  <script src="vendor/jquery/jquery.min.js"></script>
+  <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script>
+    $("#menu-toggle").click(function(e) {
+      e.preventDefault();
+      $("#wrapper").toggleClass("toggled");
+    });
+  </script>
 </body>
+</html>
