--- a/document.html
+++ b/document.html
@@ -44,16 +44,13 @@
         <div class="collapse navbar-collapse " id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
             <li class="top-nav-item">
-              <a  href="www.google.com">Home</a>
-            </li>
-            <li class="top-nav-item">
-              <a  href="#">Announcments</a>
+              <a  href="announcements.html">Announcments</a>
             </li>
             <li class="top-nav-item">
               <a  href="#">Documents</a>
             </li>
             <li class="top-nav-item">
-              <a  href="#">Management</a>
+              <a  href="management.html">Management</a>
             </li>
             <li class="top-nav-item dropdown-button">
               <a  href="#"  role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
