user interface update and pay due is added

--- a/announcements.html
+++ b/announcements.html
@@ -47,7 +47,7 @@
               <a  href="#">Announcements</a>
             </li>
             <li class="top-nav-item">
-              <a  href="document.html">Documents</a>
+              <a  href="document/dues.php">Documents</a>
             </li>
             <li class="top-nav-item">
               <a  href="management.html">Management</a>
