--- a/management.html
+++ b/management.html
@@ -35,7 +35,7 @@
               <a  href="announcements.html">Announcements</a>
             </li>
             <li class="top-nav-item">
-              <a  href="document.html">Documents</a>
+              <a  href="document/dues.php">Documents</a>
             </li>
             <li class="top-nav-item">
               <a  href="#">Management</a>
