--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
               <a  href="announcements.html">Announcments</a>
             </li>
             <li class="top-nav-item">
-              <a  href="document.html">Documents</a>
+              <a  href="document/dues.php">Documents</a>
             </li>
             <li class="top-nav-item">
               <a  href="management.html">Management</a>
