--- a/management.html
+++ b/management.html
@@ -32,7 +32,7 @@
         <div class="collapse navbar-collapse " id="navbarSupportedContent">
           <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
             <li class="top-nav-item">
-              <a  href="announcements.html">Announcements</a>
+              <a  href="announcements.php">Announcements</a>
             </li>
             <li class="top-nav-item">
               <a  href="document/dues.php">Documents</a>
@@ -41,11 +41,11 @@
               <a  href="#">Management</a>
             </li>
             <li class="top-nav-item dropdown-button">
-              <a  href="contact.html"  role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+              <a  href="contact.php"  role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                 Contact <i class="fa fa-caret-down"></i>
               </a>
               <div class="dropdown-menu-right dropdown-content" aria-labelledby="navbarDropdown">
-                <a href="contact.html">suggestion</a>
+                <a href="contact.php">suggestion</a>
                 <a href="#contact">contact info</a>
               </div>
             </li>
